data/derived/comb/progs/unify/prog2853.ml.out
Characters 51-70:
  ( digitsOfInt(n / 10), n mod 10) :: [];;
    ^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a * 'b) list
